# seraph

./: CMakeLists.txt  README.md
demos/gravity/: main.cpp
seraph/action/: AnyAction.hpp  FunctionAction.cpp  FunctionAction.hpp  InfiniteAction.cpp  InfiniteAction.hpp  MoveAction.cpp  MoveAction.hpp  ParallelAction.cpp  ParallelAction.hpp  RepeatAction.cpp  RepeatAction.hpp  RotateAction.cpp  RotateAction.hpp  ScaleAction.cpp  ScaleAction.hpp  SequenceAction.cpp  SequenceAction.hpp  WaitAction.cpp  WaitAction.hpp
seraph/core/: Box.hpp  Circle.hpp  Clock.hpp  Color.hpp  Exception.hpp  Game.cpp  Game.hpp  Input.hpp  KeyCode.hpp  MouseCode.hpp  Point.hpp  Rectangle.hpp  Size.hpp  Vector.hpp  VisitSet.hpp  Window.cpp  Window.hpp
seraph/detail/: VisitorSet.hpp
seraph/event/: AnyEvent.hpp  FocusGainedEvent.hpp  FocusLostEvent.hpp  KeyPressedEvent.hpp  KeyReleasedEvent.hpp  MouseMovedEvent.hpp  MousePressedEvent.hpp  MouseReleasedEvent.hpp  WindowClosedEvent.hpp  WindowResizedEvent.hpp
seraph/event/detail/: AnyEventVariant.hpp
seraph/hash/: SipHasher.cpp  SipHasher.hpp
seraph/memory/: FontManager.hpp  ResourceManager.hpp  TextureManager.hpp
seraph/node/: LabelNode.cpp  LabelNode.hpp  MusicNode.cpp  MusicNode.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  ShapeNode.cpp  ShapeNode.hpp  SoundNode.cpp  SoundNode.hpp  SpriteNode.cpp  SpriteNode.hpp
seraph/physics/: PhysicsBody.cpp  PhysicsBody.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RectanglePhysicsBody.cpp  RectanglePhysicsBody.hpp
tests/: catch.hpp
tests/core/: PointTests.cpp
